--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.5</version>
+		<!--<version>3.2.5</version>-->
+		<version>3.1.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.techcareer</groupId>
@@ -13,6 +14,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Full_Stack_Developer5</name>
 	<description>Spring Boot &amp; React JS</description>
+	<!--
+	  war: java EE için kullanalım. JSP,servlet,html,css3
+	  jar: Spring Boot için kullanalım
+   -->
 
 	<!--properties-->
 	<properties>
@@ -76,13 +81,13 @@
 			<version>${gson.version}</version>
 		</dependency>
 
-		<!--devtools:otomatik compiler icin-->
+		<!--devtools:otomatik compiler icin
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency>-->
 
 		<!--application.properties ==> application.yml-->
 		<dependency>
