--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -117,7 +117,7 @@ spring.mail.port=587
 #@Value("${spring.mail.username}")  Spring taraf?ndan böyle alaca??m.
 spring.mail.username=denememalatya4444@gmail.com
 # https://myaccount.google.com/u/1/apppasswords?utm_source=google-account&utm_medium=myaccountsecurity&utm_campaign=tsv-settings&rapt=AEjHL4P8nSQ8twCoE1ef0PRF8UdwMl3dsLvMC-Wptpu2fkt5fuQyWb6WHDgyYO48RiROZCs97aiuHc6fwzh6A0_5RJriEThq1reQFzrc4OIVUL0FJwL0hew
-spring.mail.password=?ifre123456
+spring.mail.password=rsio gcdc vmrv jnng
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
