--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -282,7 +282,7 @@ spring.jpa.show-sql=true
 # create-drop: Veritaban? ?emas?n? olu?turur. E?er tablolar varsa siler tekrar olu?turur. (uygulama kapan?rken tablolar? siler)
 # validate   : Var olan tablolar? kar??la?t?r?r, herhangi bir de?i?iklik yapmaz
 # update     : Veri taban? silmez yeni tablolar? ekler veya güncellemeler yapar.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 ######################################################################################
 ### H2 DB#############################################################################
