--- a/blog/package.json
+++ b/blog/package.json
@@ -9,7 +9,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.6.8",
+    "i18next": "^23.11.4",
+    "react-i18next": "^14.1.1",
+    "react-router-dom": "^6.23.1"
   },
   "scripts": {
     "nodemon": "nodemon .src/index.js",
