--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<swagger.version>2.0.0</swagger.version>
 		<gson.version>2.8.6</gson.version>
 		<!--  <swagger.fox.version>3.0.0</swagger.fox.version>-->
+		<spring-security.version>6.2.4</spring-security.version>
 	</properties>
 
 	<!-- start dependencies-->
