--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Genel Ayarlar
-server.port=4444
+server.port=3333
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
 server.error.whitelabel.enabled=true
@@ -33,3 +33,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.security.web.user=admin
+spring.security.web.password=root
+spring.security.web.roles=SUPERADMIN
